[gd_scene load_steps=4 format=3 uid="uid://cyoo4u0ybox1o"]

[ext_resource type="Script" uid="uid://dl223rcajfkfw" path="res://Prefabs/UI/CityUI.gd" id="1_1gn7b"]
[ext_resource type="Texture2D" uid="uid://luibggplp2ss" path="res://images/cityIcon.png" id="2_1gn7b"]
[ext_resource type="Script" uid="uid://cbqq0q2dyx4pf" path="res://Prefabs/UI/BuildingUI.gd" id="3_44uyq"]

[node name="CityUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gn7b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 95.0
offset_right = -179.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CityInfo" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/CityInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/CityInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 144)
layout_mode = 2
texture = ExtResource("2_1gn7b")
stretch_mode = 5

[node name="City" type="HBoxContainer" parent="Panel/HBoxContainer/CityInfo/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/City"]
layout_mode = 2
size_flags_horizontal = 0
text = "City Name:"

[node name="CityName" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/City"]
layout_mode = 2
size_flags_horizontal = 10
text = "Default Name"
horizontal_alignment = 2

[node name="Planet" type="HBoxContainer" parent="Panel/HBoxContainer/CityInfo/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/Planet"]
layout_mode = 2
size_flags_horizontal = 0
text = "Planet:"

[node name="PlanetName" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/Planet"]
layout_mode = 2
size_flags_horizontal = 10
text = "Default Planet"
horizontal_alignment = 2

[node name="BuildingCount" type="HBoxContainer" parent="Panel/HBoxContainer/CityInfo/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/BuildingCount"]
layout_mode = 2
size_flags_horizontal = 0
text = "Buildings:"

[node name="BuildingCount" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/BuildingCount"]
layout_mode = 2
size_flags_horizontal = 10
text = "Default building Count"
horizontal_alignment = 2

[node name="Population" type="HBoxContainer" parent="Panel/HBoxContainer/CityInfo/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/Population"]
layout_mode = 2
size_flags_horizontal = 0
text = "Population:"

[node name="PopCount" type="Label" parent="Panel/HBoxContainer/CityInfo/VBoxContainer/Population"]
layout_mode = 2
size_flags_horizontal = 10
text = "Default population"
horizontal_alignment = 2

[node name="Buildings" type="Panel" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Buildings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuildingLabel" type="Label" parent="Panel/HBoxContainer/Buildings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Buildings"
horizontal_alignment = 1

[node name="BuildingsScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/Buildings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "This City Has No Buildings Select New Building To Add One"
horizontal_alignment = 1

[node name="BuildingUI" type="Panel" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_44uyq")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Icon" type="TextureRect" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_1gn7b")
stretch_mode = 5

[node name="BuildingType" type="Label" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer"]
layout_mode = 2
text = "Default industry"

[node name="Lvl" type="Label" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer"]
layout_mode = 2
text = "Lvl 2999"

[node name="Label" type="Label" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer"]
layout_mode = 2
text = "Tier 1"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Lvl Up Button" type="Button" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Expand Industry"

[node name="UpgradeTier" type="Button" parent="Panel/HBoxContainer/Buildings/VBoxContainer/BuildingsScrollContainer/BuildingUI/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade Tier"

[node name="AddNewBuilding" type="HBoxContainer" parent="Panel/HBoxContainer/Buildings/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/HBoxContainer/Buildings/VBoxContainer/AddNewBuilding"]
layout_mode = 2
size_flags_horizontal = 10
text = "New Building"
